tests/unit/parser/invalid-problems/action-fallibilities-section-without-requirement.pddl
; action fallibilities section (4:10) defined, but `:fallible-actions` does not appear in requirements section
(define (problem action-fallibilities-section-without-requirement)
        (:domain invalid-problems-domain)
        (:fails)
        (:goal (and)))